[package]
name = "clap-maybe-deser"
version = "0.2.0"
edition = "2021"
resolver = "2"
authors = ["gluax"]
license = "MIT OR Apache-2.0"
description = "Adds the ability to use deserializable data as a clap argument"
readme = "README.md"
repository = "https://github.com/gluax/clap-maybe-deser"
include = ["examples/**", "src/**", "screenshots/**"]

[features]
default = []
serde_json = ["dep:serde_json"]
stdin = ["dep:clap-stdin"]

[dependencies]
clap = { version = "4.5" }
clap-stdin = { version = "0.4", optional = true }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
clap = { version = "4.5", default-features = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
serde_yml = "0.0.10"

[[example]]
name = "json_config"
required-features = ["serde_json"]

[[example]]
name = "maybe_json_config"
required-features = ["serde_json"]

[[example]]
name = "maybe_stdin_json_config"
required-features = ["serde_json", "stdin"]
